[tool.poetry]
name = "darkspace"
version = "0.1.0"
description = ""
authors = ["gsy0911 <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-contrib-python = "^4.5.2"
rawpy = "^0.16.0"
Pillow = "^8.2.0"
imageio = "^2.9.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.1"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
sphinx = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
